unpackaged/main/default/objects/Case/fields/ET_Issue_Type_New__c.field-meta.xml
<CustomField>
    <fullName>ET_Issue_Type_New__c</fullName>
    <label>ET Issue Types</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Requestor__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Driver is driving recklessly.</fullName>
            </value>
            <value>
                <fullName>Driver Misbehaved.</fullName>
            </value>
            <value>
                <fullName>Driver(s) misbehaved with our Guests.</fullName>
            </value>
            <value>
                <fullName>Drivers are not  neat and clean.</fullName>
            </value>
            <value>
                <fullName>Customer is changing destination .</fullName>
            </value>
            <value>
                <fullName>Guest contact is not available.</fullName>
            </value>
            <value>
                <fullName>Emirates Transport online systems are not accessible</fullName>
            </value>
            <value>
                <fullName>Emirates Transport mobile services are bad.</fullName>
            </value>
            <value>
                <fullName>Please change the driver and vehicle immediately</fullName>
            </value>
            <value>
                <fullName>I have a loss of items from Emirates Transport car.</fullName>
            </value>
            <value>
                <fullName>The driver didn&#39;t reach on the promised time.</fullName>
            </value>
            <value>
                <fullName>Driver is no aware about the destination location.</fullName>
            </value>
            <value>
                <fullName>Promised amenities are not provided to the Guests.</fullName>
            </value>
            <value>
                <fullName>The requested vehicle/promised vehicles is not provided.</fullName>
            </value>
            <value>
                <fullName>Driver dropped in the wrong destination.</fullName>
            </value>
            <value>
                <fullName>Driver arrived on time , but however we are not intimated.ET needs to look into their communication.</fullName>
            </value>
            <value>
                <fullName>Our Guests are not picked or (dropped)</fullName>
            </value>
            <value>
                <fullName>Service request is not responded by the Operation team/Business Team.</fullName>
            </value>
            <value>
                <fullName>The requested number of vehicles are not provided.</fullName>
            </value>
            <value>
                <fullName>Vehicle conditions are bad.</fullName>
            </value>
            <value>
                <fullName>Emergency situation happened and no proper coordination happened.</fullName>
            </value>
            <value>
                <fullName>We requested for specific amenities which was promised and customer complained that they never received it.</fullName>
            </value>
            <value>
                <fullName>Our guests are dropped off in wrong location.</fullName>
            </value>
            <value>
                <fullName>Reckless driving.</fullName>
            </value>
            <value>
                <fullName>Vehicle is parked infront of my home blocking my vehicles.</fullName>
            </value>
            <value>
                <fullName>Emirates Transport is running Chauffer service without permission.</fullName>
            </value>
            <value>
                <fullName>Instructor misbehaved.</fullName>
            </value>
            <value>
                <fullName>Staffs Misbehaved.</fullName>
            </value>
            <value>
                <fullName>I am asked for a bribe to pass the tests.</fullName>
            </value>
            <value>
                <fullName>My instructor asked for Bribe.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>