unpackaged/main/default/objects/Case/fields/ET_Premise__c.field-meta.xml
<CustomField>
    <fullName>ET_Premise__c</fullName>
    <label>ET Premise</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inside ET Premise</fullName>
            </value>
            <value>
                <fullName>Outside ET Premise</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>