unpackaged/main/default/objects/Case/fields/ET_Tyre_Party_type__c.field-meta.xml
<CustomField>
    <fullName>ET_Tyre_Party_type__c</fullName>
    <formula>TEXT( Account.Party_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ET Tyre Party type</label>
    <type>Text</type>
</CustomField>