unpackaged/main/default/objects/Case/fields/ET_Tyre_Wallet__c.field-meta.xml
<CustomField>
    <fullName>ET_Tyre_Wallet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ET Tyre Wallet</label>
    <referenceTo>ET_Tyre_Wallet__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>