unpackaged/main/default/objects/Case/fields/ETI_Customer_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>ETI_Customer_Vehicle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Vehicle</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>ET_Customer_Vehicle__c.Account__r.Id</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>ET_Customer_Vehicle__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>