unpackaged/main/default/objects/Case/fields/ETI_Issue_Category__c.field-meta.xml
<CustomField>
    <fullName>ETI_Issue_Category__c</fullName>
    <label>Issue Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Online Services</fullName>
            </value>
            <value>
                <fullName>Financial Services</fullName>
            </value>
            <value>
                <fullName>Service Compliance</fullName>
            </value>
            <value>
                <fullName>Service Quality</fullName>
            </value>
            <value>
                <fullName>Driver/Staff Behavior</fullName>
            </value>
            <value>
                <fullName>Request</fullName>
            </value>
            <value>
                <fullName>Traffic Violation</fullName>
            </value>
            <value>
                <fullName>Internal Issues</fullName>
            </value>
            <value>
                <fullName>Complaint</fullName>
            </value>
            <value>
                <fullName>Thank you and appreciation</fullName>
            </value>
            <value>
                <fullName>Follow up</fullName>
            </value>
            <value>
                <fullName>notice</fullName>
            </value>
            <value>
                <fullName>Get service</fullName>
            </value>
            <value>
                <fullName>Inquiries</fullName>
            </value>
            <value>
                <fullName>Cancel service</fullName>
            </value>
            <value>
                <fullName>Update information</fullName>
            </value>
            <value>
                <fullName>Driver Behaviour</fullName>
            </value>
            <value>
                <fullName>Accident/Emergency</fullName>
            </value>
            <value>
                <fullName>Safety Issue</fullName>
            </value>
            <value>
                <fullName>Theft</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>