unpackaged/main/default/objects/Case/fields/ETIN_Correction_for__c.field-meta.xml
<CustomField>
    <fullName>ETIN_Correction_for__c</fullName>
    <label>Correction for</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Emirates ID</fullName>
            </value>
            <value>
                <fullName>Employee ID</fullName>
            </value>
            <value>
                <fullName>Name</fullName>
            </value>
            <value>
                <fullName>Gender</fullName>
            </value>
            <value>
                <fullName>Marital Status</fullName>
            </value>
            <value>
                <fullName>Plan</fullName>
            </value>
            <value>
                <fullName>DOB</fullName>
            </value>
            <value>
                <fullName>Chassis Number</fullName>
                <isActive>false</isActive>
                <label>Chassis Number</label>
            </value>
            <value>
                <fullName>Engine Number</fullName>
                <isActive>false</isActive>
                <label>Engine Number</label>
            </value>
            <value>
                <fullName>Plate Number</fullName>
                <isActive>false</isActive>
                <label>Plate Number</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>