unpackaged/main/default/objects/Case/fields/ETIN_Employee_ID__c.field-meta.xml
<CustomField>
    <fullName>ETIN_Employee_ID__c</fullName>
    <formula>Account.ETIN_Employee_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employee ID</label>
    <type>Text</type>
</CustomField>