unpackaged/main/default/objects/Case/fields/ETIN_Employee_Requested__c.field-meta.xml
<CustomField>
    <fullName>ETIN_Employee_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Employee Requested</label>
    <type>Checkbox</type>
</CustomField>