unpackaged/main/default/objects/Case/fields/ETIN_Member_First_Name__c.field-meta.xml
<CustomField>
    <fullName>ETIN_Member_First_Name__c</fullName>
    <formula>Insurance__r.First_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Member First Name</label>
    <type>Text</type>
</CustomField>