unpackaged/main/default/objects/Case/fields/ETIN_Member_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>ETIN_Member_Last_Name__c</fullName>
    <formula>Insurance__r.Last_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Member Last Name</label>
    <type>Text</type>
</CustomField>