unpackaged/main/default/objects/Case/fields/ETIN_Passport_Number__c.field-meta.xml
<CustomField>
    <fullName>ETIN_Passport_Number__c</fullName>
    <formula>Insurance__r.Passport_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Passport Number</label>
    <type>Text</type>
</CustomField>