unpackaged/main/default/objects/Case/fields/ETIN_Place_of_Visa_Issuance__c.field-meta.xml
<CustomField>
    <fullName>ETIN_Place_of_Visa_Issuance__c</fullName>
    <formula>Insurance__r.Visa_Emirates__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Place of Visa Issuance</label>
    <type>Text</type>
</CustomField>