unpackaged/main/default/objects/Case/fields/ETIN_Reason_for_Cancellation__c.field-meta.xml
<CustomField>
    <fullName>ETIN_Reason_for_Cancellation__c</fullName>
    <label>Reason for Cancellation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Termination</fullName>
            </value>
            <value>
                <fullName>Resignation</fullName>
            </value>
            <value>
                <fullName>End of Service</fullName>
            </value>
            <value>
                <fullName>Already Insured</fullName>
            </value>
            <value>
                <fullName>Visa Cancellation</fullName>
            </value>
            <value>
                <fullName>Duplicate Cards</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>