unpackaged/main/default/objects/Case/fields/ETIN_Requested_Correction__c.field-meta.xml
<CustomField>
    <fullName>ETIN_Requested_Correction__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Requested Correction</label>
    <length>255</length>
    <type>Text</type>
</CustomField>