unpackaged/main/default/objects/Case/fields/ETST_Complaint_Type__c.field-meta.xml
<CustomField>
    <fullName>ETST_Complaint_Type__c</fullName>
    <label>Complaint Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Accident/Emergency</fullName>
            </value>
            <value>
                <fullName>Bus tracking Issue</fullName>
                <isActive>false</isActive>
                <label>Bus tracking Issue</label>
            </value>
            <value>
                <fullName>Cancellation</fullName>
                <isActive>false</isActive>
                <label>Cancellation</label>
            </value>
            <value>
                <fullName>Complaint on Driver</fullName>
                <isActive>false</isActive>
                <label>Complaint on Driver</label>
            </value>
            <value>
                <fullName>Complaint on facilities</fullName>
                <isActive>false</isActive>
                <label>Complaint on facilities</label>
            </value>
            <value>
                <fullName>Contract Issue</fullName>
                <isActive>false</isActive>
                <label>Contract Issue</label>
            </value>
            <value>
                <fullName>Driver/Staff Behaviour</fullName>
            </value>
            <value>
                <fullName>Feedback</fullName>
            </value>
            <value>
                <fullName>Financial Services</fullName>
            </value>
            <value>
                <fullName>Functionality Issue</fullName>
                <isActive>false</isActive>
                <label>Functionality Issue</label>
            </value>
            <value>
                <fullName>Invoice Issue</fullName>
                <isActive>false</isActive>
                <label>Invoice Issue</label>
            </value>
            <value>
                <fullName>Online Services</fullName>
            </value>
            <value>
                <fullName>Other Requests</fullName>
            </value>
            <value>
                <fullName>Payment Issue</fullName>
                <isActive>false</isActive>
                <label>Payment Issue</label>
            </value>
            <value>
                <fullName>Refund</fullName>
                <isActive>false</isActive>
                <label>Refund</label>
            </value>
            <value>
                <fullName>Refund Issue</fullName>
                <isActive>false</isActive>
                <label>Refund Issue</label>
            </value>
            <value>
                <fullName>Request for New Service</fullName>
            </value>
            <value>
                <fullName>Return</fullName>
                <isActive>false</isActive>
                <label>Return</label>
            </value>
            <value>
                <fullName>Safety Issue</fullName>
            </value>
            <value>
                <fullName>Service Quality &amp; Compliance</fullName>
            </value>
            <value>
                <fullName>Services</fullName>
                <isActive>false</isActive>
                <label>Services</label>
            </value>
            <value>
                <fullName>Slot Issue</fullName>
                <isActive>false</isActive>
                <label>Slot Issue</label>
            </value>
            <value>
                <fullName>Theft</fullName>
            </value>
            <value>
                <fullName>Traffic Violation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>