unpackaged/main/default/objects/Case/fields/ETST_Rating__c.field-meta.xml
<CustomField>
    <fullName>ETST_Rating__c</fullName>
    <label>Rating</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>