unpackaged/main/default/objects/Case/fields/ETST_Student__c.field-meta.xml
<CustomField>
    <fullName>ETST_Student__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Student</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>ETST_Student__c.ETST_School__r.Id</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>ETST_Student__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>