unpackaged/main/default/objects/Case/fields/ETST_Suggestion_Type__c.field-meta.xml
<CustomField>
    <fullName>ETST_Suggestion_Type__c</fullName>
    <label>Suggestion Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Improvement</fullName>
            </value>
            <value>
                <fullName>New Feature</fullName>
            </value>
            <value>
                <fullName>Usability</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>