unpackaged/main/default/objects/Case/fields/ETST_User__c.field-meta.xml
<CustomField>
    <fullName>ETST_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>