unpackaged/main/default/objects/Case/fields/ETT_Brand__c.field-meta.xml
<CustomField>
    <fullName>ETT_Brand__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Brand</label>
    <referenceTo>ETT_Brand_Master__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>