unpackaged/main/default/objects/Case/fields/ETT_Country_Master__c.field-meta.xml
<CustomField>
    <fullName>ETT_Country_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Country</label>
    <referenceTo>ETT_Country_Master__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>