unpackaged/main/default/objects/Case/fields/ETT_Pattern__c.field-meta.xml
<CustomField>
    <fullName>ETT_Pattern__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pattern</label>
    <referenceTo>ETT_Pattern_Master__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>