unpackaged/main/default/objects/Case/fields/ETT_Staging_Quotation_Request__c.field-meta.xml
<CustomField>
    <fullName>ETT_Staging_Quotation_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Staging Quotation Request</label>
    <referenceTo>ETT_Staging_Quotation_Request__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>