unpackaged/main/default/objects/Case/fields/ETT_Tyre_Size__c.field-meta.xml
<CustomField>
    <fullName>ETT_Tyre_Size__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tyre Size</label>
    <referenceTo>ETT_Tyre_Size_Master__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>