unpackaged/main/default/objects/Case/fields/Evidence__c.field-meta.xml
<CustomField>
    <fullName>Evidence__c</fullName>
    <label>Evidence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>