unpackaged/main/default/objects/Case/fields/Factory_Manager_Comments__c.field-meta.xml
<CustomField>
    <fullName>Factory_Manager_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Factory Manager Comments</label>
    <type>TextArea</type>
</CustomField>