unpackaged/main/default/objects/Case/fields/Feedback_For__c.field-meta.xml
<CustomField>
    <fullName>Feedback_For__c</fullName>
    <label>Feedback For</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Transport and Leasing</fullName>
            </value>
            <value>
                <fullName>Maintenance</fullName>
            </value>
            <value>
                <fullName>ET Services</fullName>
            </value>
            <value>
                <fullName>Staff</fullName>
            </value>
            <value>
                <fullName>School Transport</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>