unpackaged/main/default/objects/Case/fields/Filling_Technician__c.field-meta.xml
<CustomField>
    <fullName>Filling_Technician__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Filling Technician</label>
    <length>250</length>
    <type>Text</type>
</CustomField>