unpackaged/main/default/objects/Case/fields/Filling_Technician_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Filling_Technician_Remarks__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Filling Technician Remarks</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>