unpackaged/main/default/objects/Case/fields/Final_Inspection_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Final_Inspection_End_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Final Inspection End Time</label>
    <type>DateTime</type>
</CustomField>