unpackaged/main/default/objects/Case/fields/Final_inspection_technician__c.field-meta.xml
<CustomField>
    <fullName>Final_inspection_technician__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Final inspection technician</label>
    <length>250</length>
    <type>Text</type>
</CustomField>