unpackaged/main/default/objects/Case/fields/FM_Approved__c.field-meta.xml
<CustomField>
    <fullName>FM_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>using for Recommendation field check to update Case Status</description>
    <label>FM Approved?</label>
    <type>Checkbox</type>
</CustomField>