unpackaged/main/default/objects/Case/fields/Gender_AR__c.field-meta.xml
<CustomField>
    <fullName>Gender_AR__c</fullName>
    <label>Gender AR</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>الذكر</fullName>
            </value>
            <value>
                <fullName>أنثى</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>