unpackaged/main/default/objects/Case/fields/GL_Activity__c.field-meta.xml
<CustomField>
    <fullName>GL_Activity__c</fullName>
    <formula>if(Sales_Agreement__c !=null, Sales_Agreement__r.GL_Activity__c, RIGHT(RecordType.Name, LEN(RecordType.Name) - FIND(&#39;-&#39;, RecordType.Name)))
/*Sales_Agreement__r.GL_Activity__c*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Activity</label>
    <type>Text</type>
</CustomField>