unpackaged/main/default/objects/Case/fields/GL_Location__c.field-meta.xml
<CustomField>
    <fullName>GL_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Station/Area</label>
    <referenceTo>ETSALES_Location__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>