unpackaged/main/default/objects/Case/fields/GL_Region__c.field-meta.xml
<CustomField>
    <fullName>GL_Region__c</fullName>
    <formula>if(Sales_Agreement__c !=null, Sales_Agreement__r.GL_Region__c, GL_Location__r.GL_Region__c)
/*Sales_Agreement__r.GL_Region__c*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Region (The area for the complaint)</label>
    <type>Text</type>
</CustomField>