unpackaged/main/default/objects/Case/fields/GL_Zone__c.field-meta.xml
<CustomField>
    <fullName>GL_Zone__c</fullName>
    <formula>if(Sales_Agreement__c !=null, Sales_Agreement__r.GL_Zone__c, GL_Location__r.GL_Zone__c)
/*Sales_Agreement__r.GL_Zone__c*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Zone</label>
    <type>Text</type>
</CustomField>