unpackaged/main/default/objects/Case/fields/Inspection_Card__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Card__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Inspection Card</label>
    <length>255</length>
    <type>Text</type>
</CustomField>