unpackaged/main/default/objects/Case/fields/Inspection_start_time__c.field-meta.xml
<CustomField>
    <fullName>Inspection_start_time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Inspection start time</label>
    <type>DateTime</type>
</CustomField>