unpackaged/main/default/objects/Case/fields/Insurance__c.field-meta.xml
<CustomField>
    <fullName>Insurance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Insurance</label>
    <referenceTo>ETIN_Insurance__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>