unpackaged/main/default/objects/Case/fields/Insurance_Card_Number__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Card_Number__c</fullName>
    <formula>Insurance__r.Card_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Insurance Card Number</label>
    <type>Text</type>
</CustomField>