unpackaged/main/default/objects/Case/fields/Insurance_Number__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Number__c</fullName>
    <formula>Insurance__r.Insurance_Policy_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Policy Number</label>
    <type>Text</type>
</CustomField>