unpackaged/main/default/objects/Case/fields/InvoiceType__c.field-meta.xml
<CustomField>
    <fullName>InvoiceType__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Invoice Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>