unpackaged/main/default/objects/Case/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>