unpackaged/main/default/objects/Case/fields/Latest_Case_Comment__c.field-meta.xml
<CustomField>
    <fullName>Latest_Case_Comment__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Latest Case Comment</label>
    <type>TextArea</type>
</CustomField>